fixes spacing

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -43,7 +43,7 @@ button {
 
 
 .day {
-    margin: 20px;
+    margin: 2px;
 }
 
 #searched-cities-list > button {
